--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.16.7",
     "@pinecone-database/pinecone": "^3.0.1",
     "next": "14.2.6",
     "openai": "^4.56.0",
